--- a/style.css
+++ b/style.css
@@ -1,136 +1,106 @@
-#banner{
-    width: 100%;
-    height: 250px;
-}
-
-img{
-    width: 50%;
-    display: block;
-    margin: auto;
-    border: 2px solid white;
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
- background-color: black;
+ background-image: linear-gradient(to left,#191919 ,#131212, #131313, #1b1b1b);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ color: #fff;
+ height: 100vh;
 }
 
-a{
- color: white;
- text-decoration: none;
- line-height: 200px;
+main #em{
+  font-size: 2vw;
 }
 
-p{
- color: white;
+main #breve{
+  font-size: 15vw;
 }
 
-h1{
-    color: white;
-   }
-
-h2{
- color: red;
+main #breve em{
+  color: #e91e63;
+  font-style: normal;
 }
 
-h3{
- color: royalblue;
+main #novidades{
+  font-size: 4vw;
+  text-align: end;
+  background-image: linear-gradient(to left, #212121, #e91e63);
+  padding: 7px 40px 7px 0;
+  border-radius: 250px;
 }
 
-table{
-    color: white;
+main article{
+  position: absolute;
+  right: 35px;
+  bottom: 20px;
+  padding: 50px;
+  border-radius: 20px;
+  background-image:  linear-gradient(to left, #e91e63, #212121, #212121, #212121);
+  transition: all .55s ease-in-out;
 }
 
-table, th, td{
-    border: 1px solid grey;
+main article:hover{
+  transform: scale(1.1);
 }
 
-td{
- text-align: center;
-}
-
-li{
-    color: grey;
-}
-
-#greem{
-    color: greenyellow;
-}
-
-#grey{
-    color: grey;
-}
-
-#red{
-    color: red;
-}
-
-#Total{
-   color: whitesmoke;
-}
-
-#linha{
-    color: azure;
-    border: 2px solid ;
-    width: 100%;
-}
-
-#noveoito{
-   width: 35%;
-}
-
-#quinze, #msn{
-   height: 400px;
-}
-
-#index, #messi, #elclasico, #titulo{
-   background-color: blue;
-}
-
-#pag{
-   text-align: right;
-   margin-left: 1500px;
-}
-
-#pindex{
-   text-align: right;
-   margin-left: 1670px;
-}
-
-#white{
-   color: white;
-}
-
-#ul-nav {
-    list-style: none;
-    display: flex;
+@media (max-width: 950px) {
+  main #em{
+    font-size: 2.5vw;
   }
   
-  #ul-nav,
-  li {
-    letter-spacing: 1px;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-
-  nav {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    font-size: 24px;
-    justify-content: space-around;
-    align-items: center;
-    background: black;
-    height: 8vh;
-  }
-
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-
-  a:hover{
-    color: brown;
-    font-size: 25pt;
-    transition: 0.5s;
+  main #breve{
+    font-size: 20vw;
   }
   
-  p{
-    font-size: 18px;
+  main #novidades{
+    font-size: 5vw;
+    text-align: end;
+    background-image: linear-gradient(to left, #212121, #e91e63);
+    padding: 7px 40px 7px 0;
+    border-radius: 250px;
   }
+}
+
+@media (max-width: 950px) {
+  main #em{
+    font-size: 3vw;
+  }
+  
+  main #breve{
+    font-size: 25vw;
+  }
+  
+  main #novidades{
+    font-size: 7vw;
+    text-align: end;
+    background-image: linear-gradient(to left, #212121, #e91e63);
+    padding: 7px 40px 7px 0;
+    border-radius: 250px;
+  }
+
+  main article{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    padding: 50px;
+    border-radius: 20px;
+    background-image:  linear-gradient(to left, #e91e63, #212121, #212121, #212121);
+    transition: all .55s ease-in-out;
+  }
+
+  main article h1{
+    font-size: 4vw;
+  }
+
+  main article h3{
+    font-size: 3vw;
+  }
+}
+
