--- a/header.css
+++ b/header.css
@@ -14,7 +14,7 @@ a {
 }
 
 #navbar-container {
-    max-width: 400px;
+    max-width: 80%;
     height: 100%;
     margin: auto;
     display: flex;
@@ -56,6 +56,7 @@ a {
     #navbar-container {
         flex-direction: column;
         padding: 20px 0;
+        max-width: 400px;
     }
     
     #navbar-items {
