--- a/header.css
+++ b/header.css
@@ -54,9 +54,9 @@ a {
 
 @media (max-width:800px) {
     #navbar-container {
+        width: auto;
         flex-direction: column;
         padding: 20px 0;
-        max-width: 400px;
     }
     
     #navbar-items {
