--- a/header.css
+++ b/header.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    user-select: none;
+  }
+  
 a {
     text-decoration: none;
     color: inherit;
